History
=======

Version 0.4 - unreleased
------------------------

New features
~~~~~~~~~~~~

- The confirmation view will now confirm pending subscriptions to any
  channel.  This saves us from having to send a separate confirmation
  e-mail for every channel a user subscribes to.  This feature isn't
  used anywhere in S&D core at this point, but it's useful if you're
  writing custom subscription forms.
  [nouri]

- Added SubjectsCollectorBase template class that you can use to
  create a collector based on a vocabulary.  This vocabulary may come
  from anywhere, like from ATVocabularyManager or from the list of all
  subjects/tags available in your site.
  [nouri]

- Text fields will now per default not be included in the resulting
  message if there are no sibling collectors that produced items.
  E.g. if you have a heading text and a sibling topic collector, the
  heading won't appear if the topic didn't return any items.
  [nouri]

Version 0.3 - 2008-06-03
------------------------

New features
~~~~~~~~~~~~

- Add translations to German.
  [saily]

- Added preview also to channel view.  This was previously only
  available for the "send as newsletter" action.
  [malthe]

- Refactored channels management view and the dedicated channel view.
  Big improvements to usability of the channel view.
  [malthe]
  
- Added capability to embed stylesheets in outgoing mail.  Right now,
  this is a simple text field that can be set on the channel's composer.
  We're now making use of the StoneAgeHTML library to embed styles in
  the individual HTML elements instead of providing styles in the
  ``<head>`` of the HTML document.  This gives us much better support
  with quirky e-mail clients out there.
  [malthe]

  In the future, we want to extend this to allow administrators to
  select themes for individual channels by browsing and selecting from a
  list of registered styles.

- Added Czech translation.
  [naro]
